#########
# About #
#########
[package]
name = "glyphs"
authors = ["Elara Themica <elara.themica@gmail.com>"]
version = "0.0.1"
edition = "2021"

[lib]


[dependencies]
argon2 = { optional = true, version = "0.5" }
aes = { optional = true, version = "0.8" }
chrono = { optional = true, version = "0.4" }
ctr = { optional = true, version = "0.9" }
backtrace = { optional = true, version = "0.3" }
blake3 = { optional = true, version = "1.5" }
ed25519-dalek = { optional = true, version = "2.1", features = ["rand_core"] }
icu_collator = { optional = false, version = "1.5.*" }
log = { optional = true, version = "0.4" }
md5 = { default-features = false, optional = true, version = "0.7" }
rand = { optional = true, version = "0.8.4" }
rand_chacha = { optional = true, version = "0.3.1" }
serde = { optional = true, version = "^1" }
sha1 = { optional = true, version = "0.10" }
sha2 = { optional = true, version = "0.10" }
sha3 = { optional = true, version = "0.10" }
siphasher = "1"
smallvec = "^2.0.0-alpha.8"
uuid = { optional = true, version = "1.11", default-features = false, features = ["v1"] }
x25519-dalek = { optional = true, version = "2", features = ["static_secrets"] }

[dev-dependencies]
rand = { version = "0.8.4" }
log = { version = "0.4.14" }
env_logger = { version = "0.11.3" }
serde_derive = "^1"


[features]
all_hashes = ["md5", "sha1", "sha2", "sha3"]
alloc = ["ed25519-dalek/alloc", "chrono/alloc"]
crypto = ["aes", "argon2", "ctr", "ed25519-dalek", "rand", "rand_chacha", "sha3", "x25519-dalek"]
test = ["log", "crypto", "all_hashes"]
rng = ["uuid/v4"]
std = ["uuid/v1", "chrono/std"]
test_slow = []
backtrace_full = ["backtrace"]

# GLIFS filesystem types.
glifs = []

default = [
    "std",
    "alloc",
    "argon2",
    "test_slow",
    "blake3",
    "uuid",
    "rng",
    "serde",
    "log",
    "backtrace",
    "glifs",
    "crypto",
    "all_hashes",
    "chrono"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
